# matsuzawa-20260120

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-resnet18-miniImageNet.yaml  proposed-resnet18-miniImageNet.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
