[project]
name = "fewshot-lapshot"
version = "0.1.0"
description = "STVM-LapShot vs STDA-LapShot experimental framework"
requires-python = ">=3.10"

[project.dependencies]
torch = ">=2.0"
torchvision = ">=0.15"
hydra-core = ">=1.3"
omegaconf = ">=2.3"
wandb = ">=0.15"
optuna = ">=3.4"
numpy = ">=1.24"
pandas = ">=2.1"
matplotlib = ">=3.8"
seaborn = ">=0.13"
scipy = ">=1.11"
pyyaml = ">=6.0"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
